# butt-head

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
docs/: vision.md
examples/: README.md
examples/native/: Cargo.toml
examples/native/src/: main.rs
examples/stm32f0/: Cargo.toml
examples/stm32f0-embassy/: Cargo.toml
examples/stm32f0-embassy/src/: main.rs
examples/stm32f0/src/: main.rs
scripts/: ci-local  cleanup.sh  format.sh
src/: butt_head.rs  config.rs  debouncer.rs  event.rs  lib.rs  service_timing.rs  state_machine.rs  time.rs
tests/: click_tests.rs  hold_tests.rs  state_query_tests.rs
tests/common/: mod.rs
