[package]
name = "butt-head"
version = "0.1.0"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]
license = "MIT OR Apache-2.0"
description = "A no_std button input processing library for embedded systems"
repository = "https://github.com/HybridChild/butt-head"
keywords = ["embedded", "button", "switch", "no-std"]
categories = ["embedded", "no-std"]
exclude = ["examples/", "tools/"]

[features]
default = []
std = []
embassy = ["dep:embassy-time"]
defmt = ["dep:defmt"]

[dependencies]
embassy-time = { version = "0.5.0", optional = true }
defmt = { version = "1.0.1", optional = true }
