[package]
name = "stm32f0"
version = "0.1.0"
edition = "2024"

[dependencies]
butt-head = { path = "../.." }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "0.2.7"
panic-halt = "1.0.0"
rtt-target = "0.6.2"
stm32f0xx-hal = { version = "0.18.0", features = ["stm32f072"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
